--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.18.1
   flutter_riverpod: ^2.4.10
+  flutter_svg: ^2.0.10+1
   gap: ^3.0.1
   go_router: ^13.2.0
   http: ^1.2.1
+  intl: ^0.18.1
   shared_preferences: ^2.2.2
 
 dev_dependencies:
@@ -56,8 +57,9 @@ flutter:
   generate: true
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/svg/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
