--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   gap: ^3.0.1
   go_router: ^13.2.0
   http: ^1.2.1
+  image: ^4.1.7
+  image_picker: ^1.0.7
   intl: ^0.18.1
+  readmore: ^2.2.0
   shared_preferences: ^2.2.2
 
 dev_dependencies:
