--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   gap: ^3.0.1
   go_router: ^13.2.0
+  google_maps_flutter: ^2.6.0
+  google_maps_flutter_web: ^0.5.6+2
   http: ^1.2.1
   image: ^4.1.7
   image_picker: ^1.0.7
@@ -47,10 +49,10 @@ dependencies:
   shared_preferences: ^2.2.2
 
 dev_dependencies:
+  build_runner: ^2.4.9
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.9
   json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
