--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_riverpod: ^2.4.10
   flutter_svg: ^2.0.10+1
   gap: ^3.0.1
+  geocoding: ^3.0.0
   go_router: ^13.2.0
   google_maps_flutter: ^2.6.0
   google_maps_flutter_web: ^0.5.6+2
@@ -45,6 +46,7 @@ dependencies:
   image_picker: ^1.0.7
   intl: ^0.18.1
   json_annotation: ^4.8.1
+  location: ^5.0.3
   readmore: ^2.2.0
   shared_preferences: ^2.2.2
 
