--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.2.1
   image: ^4.1.7
   image_picker: ^1.0.7
+  infinite_scroll_pagination: ^4.0.0
   intl: ^0.18.1
   json_annotation: ^4.8.1
   location: ^5.0.3
